@@ -1,4 +1,4 @@
-# blocklists.list - lists the blocklists that pglcmd handles automatically
+# blocklists.list - lists the remote blocklists that pglcmd handles.
 
 # Place one URL per line for every blocklist.
 # Any line which starts with a # (hash) is a comment and is ignored.
@@ -6,14 +6,14 @@
 # Have a look at /usr/share/doc/pglcmd/README.blocklists.gz for detailed
 # information about some available blocklists.
 
-# Instead or additionally to the blocklists that are specified in this file,
-# you can manually put lists in MASTER_BLOCKLIST_DIR (/var/lib/pgl).
-# All blocklists in that directory (except those which end in "~" or have a "."
-# prefix) are used by pgld. They may be in any supported format and have to be
-# either unpacked or gzip'ped.
+# Instead or additionally to the remote blocklists that are specified here, you
+# can put local blocklists in LOCAL_BLOCKLIST_DIR (/etc/pgl/blocklists.local/).
+# All blocklists in that directory (except those in subdirectories, or which end
+# in "~" or start with ".") are used. They may be in any supported format and
+# have to be either unpacked or gzip'ped.
 
-# Do a "pglcmd reload" (or "restart" or "update") when you have edited
-# this file.
+# Do a "pglcmd reload" (or "restart" or "update") when you have edited this
+# file.
 
 # list.iblocklist.com/lists/atma/atma
 # list.iblocklist.com/lists/bluetack/ads-trackers-and-bad-pr0n
